[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heavenly-capital"
version = "1.0.0"
description = "HeavenlyCapital trading system (work in progress)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["heavenly_capital*"]